<resources>
    <string name="app_name">AndroidArt</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="btn_save_file">保存文件sp</string>
    <string name="btn_read_file">读取文件sp</string>
    <string name="et_content">please enter content</string>
    <string name="item_navigation">SystemView</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">SystemView</string>
    <string name="title_animation">Animation</string>
    <string name="item_navigation2">item_navigation2</string>
    <string name="item_splash">item_splash</string>
    <string name="title_activity_navigation2">NavigationActivity2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="btn_jump_main">跳转到主界面</string>
    <string name="btn_jump">跳转</string>
    <string name="btn_save_data">存储数据</string>
    <string name="btn_get_data">获取数据</string>
    <string name="btn_messenger">进程间通信(messenger)</string>
    <string name="btn_aidl">进程间通信(aidl)</string>
    <string name="btn_provider">进程间通信(provider)</string>
    <string name="btn_socket_tcp">进程间通信(socket tcp)</string>
    <string name="btn_send">发送</string>
    <string name="tv_content">text</string>
    <string name="btn_binder">binder线程池</string>
    <string name="btn_circle">自定义View(圆)</string>
    <string name="tabLayout">TabLayout</string>
    <string name="cardView">CardView</string>
    <string name="recycleView">recycleView</string>
    <string name="listView">listView</string>
    <string name="item_system_setting">获取常用系统属性</string>
    <string name="title_image">image</string>
    <string name="title_frameworks">frameworks</string>
    <string name="webView">webView</string>
    <string name="btn_web_view">WebView</string>

    <string name="btn_start_service">使用start启动Service</string>
    <string name="btn_bind_service">使用bind方法开启service</string>
    <string name="btn_call_method_in_service">调用service中的方法</string>
    <string name="tv_service_banzheng">办证Service</string>
    <string name="btn_unbind_service">解除绑定</string>
    <string name="btn_get_current_time">获取当下的时间</string>
</resources>
