<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_service_banzheng"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/btn_start_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_service"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_bind_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bind_service"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_call_method_in_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_call_method_in_service"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_get_current_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_current_time"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_unbind_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_unbind_service"
        android:textAllCaps="false"/>
</LinearLayout>