<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <Button android:id="@+id/btn_jump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_jump"/>
    <Button android:id="@+id/btn_save_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_data"/>
    <Button android:id="@+id/btn_messenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_messenger"
            android:textAllCaps="false"/>
    <Button android:id="@+id/btn_aidl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_aidl"
            android:textAllCaps="false"/>
    <TextView android:id="@+id/tv_content"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/app_name"
              android:textSize="25sp"/>
    <ImageView android:id="@+id/iv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@mipmap/ic_launcher"/>
</LinearLayout>